# SigXTalk

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  LR_layer1.rds  NAMESPACE  README.md  SigXTalkR.Rproj  myenv.yaml
R/: Crosstalk_analysis.R  Databases.R  MLNconstruct.R  Utilities.R  Visualization.R
Rcodes/: Communications.R  Crosstalk_analysis.R  Utilities.R  Visualization.R
datasets/: demo_cell_annotation.csv
demo/: Utilities.R  hnscc_run.R
man/: Aggregate_Causality.Rd  Calculate_Average_Expression.Rd  Calculate_Fidelity_Matrix.Rd  Calculate_Importance.Rd  Calculate_Pairwise.Rd  Calculate_Pathway_Fidelity.Rd  Calculate_Pathway_Specificity.Rd  Calculate_Specificity_Matrix.Rd  Chisq_Test.Rd  Count_Crosstalk.Rd  Extract_LR_Prob.Rd  Filter_DB.Rd  Filter_results.Rd  FindRegulator.Rd  Fisher_Test.Rd  Get_Exp_Clu.Rd  Infer_CCI.Rd  Nonlinear_Sum.Rd  PRS_calc.Rd  PlotCCI_ChordPlot.Rd  PlotCCI_CirclePlot.Rd  PlotXT_Alluvial.Rd  PlotXT_Chord.Rd  PlotXT_Counts.Rd  PlotXT_FidSpe.Rd  PlotXT_HeatMap.Rd  PlotXT_MultiCircularBar.Rd  PlotXT_RecTGHeatmap.Rd  PlotXT_Ridgeline.Rd  Prepare_Input.Rd  Prepare_Input_New.Rd  RTF_human.Rd  RTF_mouse.Rd  Run_Regression.Rd  Run_py_script.Rd  TFT_human.Rd  TFT_mouse.Rd  Trimean.Rd  is_connected_to.Rd  myPageRank.Rd  (+2 more)
pythoncodes/: main.py  main_new.py  predictor.py  preprocessing.py  pyproject.toml  training.py
pythoncodes/SigXTalkpy/: __init__.py  predictor.py  preprocessing.py  training.py
vignettes/: Demo_HNSCC.md  Process_pbmc.R  demo.md  demo_pbmc.R  main.py
