[project]
name = "SigXTalkpy"
version = "0.1.0"
description = "A package to infer crosstalk pathways induced by cell-cell communication using scRNA-seq data."
authors = [
    {name = "Jiawen Hou"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "pandas (==2.0.3)",
    "scipy (==1.10.1)",
    "scikit-learn (==1.3.0)",
    "numpy (==1.24.3)",
    "argparse (==1.4.0)",
    "dhg (==0.9.4)"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"